--- a/Programming/Programming/Theory/ООП.md
+++ b/Programming/Programming/Theory/ООП.md
@@ -69,6 +69,9 @@
 >> [!quote] 
 > 3. **Абстракция**
 >> - Выделение важных характеристик объекта, исключая незначительные детали.
+>>   Абстракция позволяет нам работать с объектами через их интерфейсы, скрывая внутреннюю реализацию и сложность.
+>>  > [!example] 
+>>  > JavaScript можно использовать для иллюстрации принципа **_абстракции_** в ООП. Абстракция позволяет нам работать с объектами через их интерфейсы, скрывая внутреннюю реализацию и сложность.
 >> ```ts 
 >> const vehicle = {
 >>   start: function() {
